--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
-DB_DATABASE=laravel_gistr
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
